--- a/login.css
+++ b/login.css
@@ -144,14 +144,19 @@ body {
     display: none;
   }
 
-  @media screen and (min-width: 480px) {
-
-
-      
+  @media screen and (max-width: 480px) {
+   
     .content form {
-      display: block;
+      width: 90%; /* Sesuaikan lebar form sesuai kebutuhan */
+      margin: auto; /* Posisikan form ke tengah */
+      padding: 20px; /* Tambahkan ruang padding */
     }
   }
+  
+      
+   
+    
+  
 
   /* Animation for the form */
   @keyframes fadeIn {
