--- a/product-responsif.css
+++ b/product-responsif.css
@@ -43,6 +43,7 @@ body {
 h1 {
     text-align: center;
     margin-top: 20px; /* Add margin for better spacing */
+    color: #fff;
 }
 
 .card-container {
